# obsidian_mirror

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  audit.toml  config.example.ron  deny.toml  docker-compose.yml
.cargo/: audit.toml
.claude/: project.md
.claude/skills/ob-release/: SKILL.md
.claude/skills/ob-release/templates/: finalize.md  plan.md  reconcile.md
.claude/skills/ob-review/: SKILL.md
.claude/skills/ob-review/templates/: changelog_entry.md  finalize.md  history_update.md  report.md
benches/: core.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: CHANGELOG-ARCHIVE.md  CHANGELOG.md  CODEREVIEW_1.3.md  CODEREVIEW_1.4.md  CODEREVIEW_1.5.md  CODEREVIEW_1.6.md  CODEREVIEW_1.7.md  CODEREVIEW_1.8.md  CODEREVIEW_1.9.md  PERFORMANCE-1.4.md  PERFORMANCE-1.5.md  PERFORMANCE-1.6.md  PERFORMANCE-1.8.md  ROADMAP-ARCHIVE.md  ROADMAP.md
src/: auth.rs  auth_db.rs  auth_handlers.rs  auth_middleware.rs  config.rs  domain.rs  error.rs  git.rs  graph.rs  handlers.rs  indexer.rs  insights.rs  lib.rs  main.rs  markdown.rs  metrics.rs  persistence.rs  reading_progress_db.rs  reading_progress_handlers.rs  scanner.rs  search_engine.rs  share_db.rs  share_handlers.rs  sidebar.rs  state.rs  sync.rs  tags.rs  templates.rs
static/: manifest.json  sw.js
static/css/: accessibility.css  animations.css  breadcrumb.css  callout.css  embed.css  favorites.css  graph.css  i18n.css  keyboard.css  layout.css  lightbox.css  login.css  markdown.css  math.css  mermaid.css  mobile.css  preview.css  print.css  reading-progress.css  recent.css  search.css  settings.css  share.css  sidebar.css  stats.css  statusbar.css  tags.css  themes.css  toc.css  variables.css  wasm-preview.css
static/js/: auth.js  callout.js  favorites.js  gestures.js  graph.js  i18n.js  init.js  katex-init.js  keyboard.js  lightbox.js  mermaid-init.js  preview.js  pwa.js  reading-progress.js  recent.js  search.js  settings.js  share.js  sidebar.js  stats.js  statusbar.js  theme.js  toc.js  utils.js  wasm-preview.js
static/wasm/: .gitignore  loader.js  obsidian_mirror_wasm.js  obsidian_mirror_wasm_bg.wasm
templates/: admin_users.html  change_password.html  graph_page.html  history.html  history_at.html  history_diff.html  index.html  insights.html  knowledge_map.html  layout.html  login.html  orphans.html  page.html  recent_notes_page.html  share.html  tag_notes.html  tags_list.html  timeline.html
