[workspace]
members = ["."]
resolver = "3"

[package]
name = "obsidian_mirror"
version = "1.3.4"
edition = "2024"

[lib]
name = "obsidian_mirror"
path = "src/lib.rs"

[[bin]]
name = "obsidian_mirror"
path = "src/main.rs"

[dependencies]
actix-web = "4.12.1"
actix-files = "0.6.9"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ron = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd", "html"] }
percent-encoding = "2.3.2"
askama = "0.15.4"
walkdir = "2.5.0"
ignore = "0.4.25"
filetime = "0.2.27"
anyhow = "1.0.100"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
pathdiff = "0.2.3"
regex = "1.12.2"
tracing-log = "0.2.0"
serde_yml = "0.0.12"
num_cpus = "1.17.0"
tantivy = "0.25.0"
rayon = "1.11"
jieba-rs = "0.8.1"
redb = "3.1.0"
bcrypt = "0.18.0"
jsonwebtoken = "=9.3.0"
actix-web-httpauth = "0.8.2"
futures-util = "0.3.31"
time = "0.3.46"
postcard = { version = "1.1.3", features = ["alloc"] }
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = "1.5.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[build-dependencies]
askama = "0.15.4"

[dev-dependencies]
tempfile = "3.24.0"
