[workspace]
# v1.6.0: 新增 crates/wasm 作为 WASM 专用子 crate，
# 服务端与浏览器端共享同一份纯函数逻辑实现
members = [".", "crates/wasm"]
resolver = "3"

[package]
name = "obsidian_mirror"
version = "1.6.3"
edition = "2024"

[lib]
name = "obsidian_mirror"
path = "src/lib.rs"

[[bin]]
name = "obsidian_mirror"
path = "src/main.rs"

[dependencies]
actix-web = "4.13.0"
actix-files = "0.6.10"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ron = "0.12.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["simd", "html"] }
percent-encoding = "2.3.2"
askama = "0.15.6"
walkdir = "2.5.0"
ignore = "0.4.25"
filetime = "0.2.27"
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
pathdiff = "0.2.3"
regex = "1.12.3"
tracing-log = "0.2.0"
serde_yml = "0.0.12"
num_cpus = "1.17.0"
tantivy = "0.26.0"
rayon = "1.11.0"
jieba-rs = "0.9.0"
redb = "4.0.0"
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
actix-web-httpauth = "0.8.2"
futures-util = "0.3.32"
time = "0.3.47"
postcard = { version = "1.1.3", features = ["alloc"] }
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = "1.5.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"

[build-dependencies]
askama = "0.15.6"

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "core"
harness = false
